# openethercat

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cmake/: openethercatConfig.cmake.in
diagnostics/: dc_hardware_sync_demo.cpp  dc_soak_demo.cpp  foe_eoe_smoke_demo.cpp  mailbox_soak_demo.cpp  physical_topology_scan_demo.cpp  topology_reconcile_demo.cpp  topology_to_eni_dump.cpp
docs/: architecture.md  dependencies.md  ds402-cubic-trajectory.md  ethercat-for-dummies.md  ethercat-primer.md  hil-validation-matrix.md  phase3-acceptance.md  production-roadmap.md  runtime-determinism.md  use-cases.md
examples/: beckhoff_io_demo.cpp  coe_dc_topology_demo.cpp  dc_hardware_sync_demo.cpp  dc_soak_demo.cpp  ds402_cubic_trajectory_demo.cpp  el6692_bridge_demo.cpp  el6692_structured_bridge_demo.cpp  el6751_can_bridge_demo.cpp  hil_conformance_demo.cpp  linux_raw_socket_cycle_demo.cpp  mailbox_soak_demo.cpp  mock_hil_soak.cpp  periodic_controller_demo.cpp  physical_topology_scan_demo.cpp  recovery_diagnostics_demo.cpp  recovery_profile_demo.cpp  redundancy_fault_sequence_demo.cpp  topology_reconcile_demo.cpp
examples/config/: beckhoff_demo.eni.xml  beckhoff_devices.xml  recovery_profile.json
include/openethercat/config/: config_loader.hpp  config_validator.hpp  eni_esi_models.hpp  recovery_profile_loader.hpp
include/openethercat/core/: process_image.hpp  slave_state.hpp
include/openethercat/mapping/: io_mapper.hpp
include/openethercat/master/: coe_mailbox.hpp  cycle_controller.hpp  cycle_statistics.hpp  distributed_clock.hpp  ethercat_master.hpp  foe_eoe.hpp  hil_campaign.hpp  slave_diagnostics.hpp  topology_manager.hpp
include/openethercat/transport/: coe_mailbox_protocol.hpp  ethercat_frame.hpp  i_transport.hpp  linux_raw_socket_transport.hpp  mock_transport.hpp  transport_factory.hpp
roadmap/: decision-log.md  handover.md  linux-transport-refactor-strategy.md  roadmap.md
scripts/hil/: run_hil_matrix.sh
src/config/: config_loader.cpp  config_validator.cpp  eni_esi_models.cpp  recovery_profile_loader.cpp
src/mapping/: io_mapper.cpp
src/master/: coe_mailbox.cpp  cycle_controller.cpp  distributed_clock.cpp  ethercat_master.cpp  foe_eoe.cpp  hil_campaign.cpp  slave_diagnostics.cpp  topology_manager.cpp
src/transport/: coe_mailbox_protocol.cpp  ethercat_frame.cpp  linux_raw_socket_transport.cpp  linux_raw_socket_transport_core_io.cpp  linux_raw_socket_transport_foe_eoe.cpp  linux_raw_socket_transport_mailbox.cpp  linux_raw_socket_transport_process_image.cpp  linux_raw_socket_transport_state_dc.cpp  linux_raw_socket_transport_topology.cpp  mock_transport.cpp  transport_factory.cpp
tests/: advanced_systems_tests.cpp  coe_mailbox_protocol_tests.cpp  mapping_tests.cpp  production_hardening_tests.cpp  protocol_and_loader_tests.cpp  transport_module_boundary_tests.cpp
